@@ -1,0 +1,4 @@
+#!/bin/bash
+#CTAFCONF, GPL, etc...
+cvs "$@" 2>&1 | ~/.ctafconf/bin/colorcvs.pl
+exit ${PIPESTATUS[0]}
