@@ -6,6 +6,7 @@
 ##
 ## Started on  Fri Sep 30 22:17:52 2005 GESTES Cedric
 ## Last update Tue Feb  6 08:05:44 2007 GESTES Cedric
+
 ##
 ##CTAFCONF
 
@@ -33,11 +34,14 @@ alias_set md '~/.ctafconf/bin/colormake distclean'
 alias_set ma '~/.ctafconf/bin/colormake clean all'
 alias_set mac '~/.ctafconf/bin/colormake clean all check'
 alias_set gm 'gmake'
-alias_set cm 'colormake'
 alias_set mm '~/.ctafconf/bin/colormake |& less'
 alias_set make_mute "~/.ctafconf/bin/colormake 1>/dev/null"
 alias_set fixme 'grep -n -a -s FIXME * 2> /dev/null'
 alias_set todo 'grep -n -a -s TODO * 2> /dev/null'
+alias_set svndiff 'svn diff --diff-cmd `which diff` -x "-w -E -u -B -b"'
+alias_set svn '~/.ctafconf/bin/colorsvn'
+alias_set cvs '~/.ctafconf/bin/colorcvs'
+
 #alias_set make 'gmake'
 
 #default alias_set for firefox and thunderbird
